--- a/features/navigation/src/main/res/navigation/nav_graph_menu.xml
+++ b/features/navigation/src/main/res/navigation/nav_graph_menu.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.home.HomeFragment"
+        android:name="com.example.home.presentation.HomeFragment"
         android:label="HomeFragment" />
     <fragment
         android:id="@+id/searchFragment"
