--- a/features/categories/src/main/res/layout/fragment_categories.xml
+++ b/features/categories/src/main/res/layout/fragment_categories.xml
@@ -6,6 +6,7 @@
     tools:context=".CategoriesFragment">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/categories_fragment" />
