--- a/features/categories/src/main/res/navigation/nav_graph_categories.xml
+++ b/features/categories/src/main/res/navigation/nav_graph_categories.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/categoriesFragment"
-        android:name="com.example.categories.CategoriesFragment"
+        android:name="com.example.categories.presentation.CategoriesFragment"
         android:label="fragment_categories"
         tools:layout="@layout/fragment_categories">
 
