--- a/features/categories/src/main/res/values/colors.xml
+++ b/features/categories/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="inactive_background_chip">#F8F7F5</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="button_background_color">#3364E0</color>
 </resources>
