--- a/features/basket/src/main/res/layout/basket_item.xml
+++ b/features/basket/src/main/res/layout/basket_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="62dp"
         android:background="@drawable/basket_item_background"
         android:scaleType="fitCenter"
+        android:layout_margin="@dimen/small_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,6 +20,7 @@
         style="@style/dish_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/normal_margin"
         app:layout_constraintStart_toEndOf="@id/dishBasketImage"
         app:layout_constraintTop_toTopOf="@id/dishBasketImage" />
 
@@ -35,6 +37,7 @@
         style="@style/dish_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_margin"
         app:layout_constraintStart_toEndOf="@id/dishBasketPrice"
         app:layout_constraintTop_toBottomOf="@id/dishBasketName" />
 
@@ -47,12 +50,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/dishBasketImage" />
 
+    <TextView
+        android:id="@+id/dishBasketCount"
+        style="@style/dish_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/small_margin"
+        app:layout_constraintStart_toEndOf="@id/dishCountDown"
+        app:layout_constraintEnd_toStartOf="@id/dishCountUp"
+        app:layout_constraintTop_toTopOf="@id/dishCountBackground"
+        app:layout_constraintBottom_toBottomOf="@id/dishCountBackground"/>
+
     <ImageButton
         android:id="@+id/dishCountDown"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:backgroundTint="@color/white"
         android:src="@drawable/cont_down"
+        android:layout_margin="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="@id/dishCountBackground"
         app:layout_constraintStart_toStartOf="@id/dishCountBackground"
         app:layout_constraintTop_toTopOf="@id/dishCountBackground" />
@@ -67,15 +82,7 @@
         app:layout_constraintEnd_toEndOf="@id/dishCountBackground"
         app:layout_constraintTop_toTopOf="@id/dishCountBackground" />
 
-    <TextView
-        android:id="@+id/dishBasketCount"
-        style="@style/dish_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/dishCountDown"
-        app:layout_constraintStart_toStartOf="@id/dishCountUp"
-        app:layout_constraintTop_toTopOf="@id/dishCountBackground"
-        app:layout_constraintBottom_toBottomOf="@id/dishCountBackground"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
