--- a/features/basket/src/main/res/layout/fragment_basket.xml
+++ b/features/basket/src/main/res/layout/fragment_basket.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".BasketFragment">
+    tools:context=".presentation.BasketFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBasket"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/addToBasketButtonDialog"
         android:layout_margin="12dp"/>
 
