--- a/features/navigation/src/main/res/menu/menu_bottom_main.xml
+++ b/features/navigation/src/main/res/menu/menu_bottom_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/homeFragment"
+        android:id="@+id/nav_graph_home"
         android:icon="@drawable/menu_home"
         android:title="@string/home"/>
 
