--- a/features/navigation/src/main/res/navigation/nav_graph_menu.xml
+++ b/features/navigation/src/main/res/navigation/nav_graph_menu.xml
@@ -2,12 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph_menu.xml"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/nav_graph_home">
 
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.home.presentation.HomeFragment"
-        android:label="HomeFragment" />
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.search.SearchFragment"
@@ -20,5 +16,5 @@
         android:id="@+id/basketFragment"
         android:name="com.example.basket.presentation.BasketFragment"
         android:label="BasketFragment" />
-    <include app:graph="@navigation/nav_graph_categories" />
+    <include app:graph="@navigation/nav_graph_home" />
 </navigation>
